--- a/.github/workflows/youtube.cards.yml
+++ b/.github/workflows/youtube.cards.yml
@@ -13,5 +13,5 @@ jobs:
         with:
           channel_id: UC2WHjPDvbE6O328n17ZGcfg
           comment_tag_name: YOUTUBE-CARDS
-          youtube_api_key: ${{ secrets.YOUTUBE_API_KEY }}
+          youtube_api_key: ${{ AIzaSyCXafWSb01fqhC5z-OdiHodxIzxcBUJf_w }}
           show_duration: true
