--- a/.github/workflows/youtube.cards.yml
+++ b/.github/workflows/youtube.cards.yml
@@ -12,3 +12,6 @@ jobs:
       - uses: DenverCoder1/github-readme-youtube-cards@main
         with:
           channel_id: UCpus-LD3MmBeX48MvYUrndQ
+          comment_tag_name: YOUTUBE-CARDS
+          youtube_api_key: ${{ secrets.YOUTUBE_API_KEY }}
+          show_duration: true
